# CS50_Week9_Finance_hw_poetry

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/app/: __init__.py  main.py
src/app/routes/: __init__.py  route.py
src/app/routes/quote/: __init__.py  route.py
src/app/routes/stock/: __init__.py  route.py
src/app/routes/users/: __init__.py  route.py
src/constants/: env.py
src/libs/: common.py  decorator.py
src/libs/errors/: custom_http_error.py  error_classes.py  error_handler.py  register_error_handler.py
src/sql/: finance.db  schema.sql  seed.sql  sqlite.py
src/templates/: buy.html  history.html  home.html  layout.html  login.html  quote.html  register.html  sell.html
