[tool.poetry]
name = "finance-poetry"
version = "0.1.0"
description = ""
authors = ["TinyMurky <murky0830@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app", from = "src" },
    { include = "sql", from = "src" },
]

[tool.poetry.scripts]
db_migrate = "sql.sqlite:SQL.migrate"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-session = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
