[tool.poetry]
name = "finance-poetry"
version = "0.1.0"
description = ""
authors = ["TinyMurky <murky0830@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app", from = "src" },
    { include = "sql", from = "src" },
]

[tool.poetry.scripts]
db_migrate = "sql.sqlite:SQL.migrate"
start = "app.main:start_prod"
dev = "app.main:start_dev"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0"
flask-session = "^0.8"
waitress = "^3.0"
pytz = "^2024.1"
requests = "^2.32"
python-dotenv = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
